--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,88 @@
-header img{
-    width: 220px;
+
+
+body{
+    background-color: bisque;
+    font-family: 'Markazi Text', serif;
+    margin-top:  3rem;
+    margin-bottom: 3rem;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2rem;
+}
+
+header > img{
+    width: 300px;
     height: 220px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     
+}
+
+nav ul {
+    list-style: none;
+    text-align: center;
+    background-color: lightgray;
+    border-radius: 5px;
+}
+
+
+
+nav li {
+    display: inline-block;
+    padding: 0.5rem;
+    
+}
+
+section{
+    display: flex;
+
+    
+}
+article{
+    
+    flex: 1;
+    
+}
+article > img {
+    width: 200px;
+    height: 200px;
+    border-radius: 1rem;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    display: flex;
+justify-content: center;    
+}
+
+
+
+footer div img {
+    width: 50px;
+    height: 60px;
 }
