--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,9 @@ h2{
 }
 
 header > img{
+    display: block;
     width: 300px;
     height: 220px;
-    display: block;
     margin-left: auto;
     margin-right: auto;
     
@@ -50,12 +50,36 @@ section{
 article{
     
     flex: 1;
+    margin: 10px 10px;
+    border: 4px;
+    border-color: lightcoral;
     
 }
 article > img {
     width: 200px;
     height: 200px;
     border-radius: 1rem;
+    
+}
+
+.top-article{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: darkorange;
+}
+
+.top-article > img {
+    padding: 70px;
+    border-radius: 8px;
+
+}
+.top-article h1{
+    margin-left: 30px;
+}
+
+.top-article p {
+    margin-right: 30px;
 }
 
 a{
@@ -63,13 +87,6 @@ a{
     color: black;
     
 }
-
-
-
-
-
-
-
 
 
 
